<resources>
    <string name="app_name">Eval-AND2-Exo2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_title">no_title</string>
    <string name="icone_plus">Icone plus.</string>
    <string name="shoppinglist_title">ShoppingList</string>
    <string name="pas_d_articles">Pas d\'articles.</string>
    <string name="image_de_l_article">Image de l\'article</string>
    <string name="no_content">No_content</string>
    <string name="quantity">Quantité</string>
    <string name="name">Name</string>
    <string name="nourriture">Nourriture</string>
    <string name="boisson">Boisson</string>
    <string name="hygi_ne">Hygiène</string>
    <string name="maison">Maison</string>
</resources>